2005-08-30  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/modules.h (CL_JUMP_TO): Fix mips* brokenness.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	* src/integer/bitwise/cl_I_ash_I.cc (ash): Avoid shifting a 32-bit
	zero value by more than 31 bits.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	Make the long-float overflow check work on 64-bit platforms.
	* src/float/lfloat/cl_LF.h (LF_exp_mid, LF_exp_high): Define as
	'unsigned int', not 'unsigned long'.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	* modules.h (CL_OUTPUT_LABEL): Work around redundant duplication
	of basic blocks by g++ 4.0.
	See <http://gcc.gnu.org/bugzilla/show_bug.cgi?id=23345>.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	Make it possible to cross-compile CLN.
	* m4/intparam.m4: New file.
	* m4/floatparam.m4: New file.
	* autoconf/aclocal.m4: Include both.
	(CL_MACHINE): Add an additional CROSS_MACRO parameter.
	* configure.ac (CL_MACHINE): When cross-compiling, use
	CL_INTPARAM_CROSS and CL_FLOATPARAM_CROSS.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	Define HAVE_LONGLONG and HAVE_LONGDOUBLE when cross-compiling.
	* autoconf/aclocal.m4 (CL_LONGLONG, CL_LONGDOUBLE): When cross-
	compiling, use the test code from gnulib.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	* autoconf/aclocal.m4 (CL_RUSAGE): Fix error when cross-compiling.

2005-08-16  Richard B. Kreckel  <kreckel@ginac.de>

	The patch of 2005-05-01 made it impossible to test the type of a cl_UP
	by comparing with &cl_class_univpoly_ring. We need an alternative:
	* include/cln/object.h (cl_class_flags_modint_ring): New #define...
	* src/polynomial/elem/cl_UP.cc (cl_class_univpoly_ring): ...used here.
	* src/polynomial/elem/cl_UP_GF2.h: Likewise.
	* src/polynomial/elem/cl_UP_MI.h: Likewise.
	* src/polynomial/elem/cl_UP_gen.h: Likewise.
	* src/polynomial/elem/cl_UP_number.h: Likewise.

2005-08-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/cc.m4 (CL_AS_NOEXECSTACK): New macro...